# aoc2024

./: Cargo.toml
.github/workflows/: codspeed.yml
benches/: common.rs  main.rs
puzzle_01/src/: main.rs
puzzle_02/src/: main.rs
puzzle_03/src/: main.rs
puzzle_04/: Cargo.toml
puzzle_04/src/: main.rs
puzzle_template/src/: main.rs
src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
test_data/: day6_mats.txt
