[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-crypto = "0.2.36"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex-lite = "0.1.6"
peg = "0.8.4"

[[bench]]
name = "main"
harness = false

[[parser]]
name ="main"


[build-dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }
paste = "1.0.15"
reqwest = { version = "0.12.9", features = ["blocking"] }
